# artfct

./: .env.example  .gitignore  .gitleaks.toml  .impeccable.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  boost.json  cloudflare-rate-limits.mjs  composer.json  eslint.config.js  package-lock.json  package.json  railway.json  skills-lock.json
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  deploy-worker.yml  release-cli.yml
app/Http/Middleware/: CacheControl.php
app/Services/: MarkdownRenderer.php
backend/: Cargo.toml  wrangler.jsonc
backend/src/: lib.rs
bootstrap/: app.php
docs/: faq.md  og-meta-tags.md
docs/superpowers/plans/: 2026-06-04-artfct-cli-onboarding.md
docs/superpowers/specs/: 2026-06-04-artfct-cli-onboarding-design.md
mcp-server/: Cargo.toml
mcp-server/src/: api.rs  artifact_crypto.rs  cli.rs  doctor.rs  main.rs  mcp.rs  setup.rs  ui.rs  uninstall.rs
public/: install.sh  robots.txt  sitemap.xml
resources/css/: app.css
resources/js/lib/: artifactCrypto.ts  asciiLogo.tsx  markdown.ts  posts.tsx  theme.tsx
resources/js/pages/: blog-show.tsx  blog.tsx  docs.tsx  welcome.tsx
resources/views/: app.blade.php  sitemap.blade.php
routes/: web.php
scripts/: deploy-worker-version.mjs
skills/artfct/: SKILL.md
skills/artfct/references/: html-authoring.md  setup.md
skills/developer-tools/: SKILL.md
skills/developer-tools/assets/: api-diff.html  env-diff.html  json-table.html  regex-tester.html
skills/presentation/: SKILL.md
tests/: TestCase.php
tests/Browser/: WelcomeLogoTest.php
tests/Feature/: BlogPermalinksTest.php  HealthCheckTest.php
tests/Unit/: MarkdownRendererTest.php
(+3 files in other folders)
