[package]
name = "artfct-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22"
brotli = "8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "wasmbind"] }
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js"] }
worker = "0.8"

